lorm 0.2.18 2016-10-1

[NEW]   support negative slice index. e.g. c.pets[-1:]
[NEW]   add 'values', 'flat'
[FIX]   using count() implements __len__()
[FIX]   optimize count() and exists()


lorm 0.2.16 2016-9-30

[FIX]   'startswith', 'endswith', 'contains' can only support string type now.
[DEL]   remove 'join'


lorm 0.2.16 2016-9-28

[FIX]   fix 'startswith'


lorm 0.2.15 2016-9-28

[FIX]   fix 'in' operation with empty argument.


lorm 0.2.11 2016-8-25

[NEW]   MysqlConnection.dup
[NEW]   MysqlConnection.set_charset, autocommit, get_autocommit
[NEW]   MysqlPool.full

[FIX]   QuerySet.update, delete return value
[FIX]   improve README.rst and test.py


lorm 0.2.10 2016-8-25

[FIX]   improve README.rst
[FIX]   delete README.md


lorm 0.2.9 2016-8-22

[NEW]   MysqlPool: last_query
[NEW]   mysql_pool


lorm 0.2.8 2016-8-22

[NEW]   Connection: add begin, rollback, commit
[NEW]   QuerySet: add update, delete with argument.


lorm 0.2.3 2016-8-20

[NEW]   MysqlPool add max_connections


lorm 0.2.3 2016-8-20

[NEW]   add new argument: ignore

[FIX]   QuerySet.filter(xxx__in=[]) crushed when list is empty
[FIX]   execute_many returns affected row count.


lorm 0.2.1 2016-8-20

[FIX]   default: autoreconnect=False


lorm 0.2.0 2016-8-20

[NEW]   base on new mysql engine: pymysql
[NEW]   add callproc
[NEW]   threading safe
[NEW]   add MysqlPool
[NEW]   add test scripts

[FIX]   disorder in make_query
[FIX]   modify escape and literal to support charset


lorm 0.1.13 2016-8-18

[FIX]   Struct arguments is more generic.


lorm 0.1.12 2016-8-18

[NEW]   add QuerySet.exists method
[NEW]   add QuerySet.__bool__ method
[NEW]   add QuerySet.__nonzero__ method

[FIX]   fix escape encode issue